--- a/.github/workflows/create_build_zip.yml
+++ b/.github/workflows/create_build_zip.yml
@@ -1,5 +1,4 @@
 on:
-  workflow_dispatch:
   push:
     tags:
       - v1.*
@@ -15,9 +14,9 @@ jobs:
     - name: Package the environment
       run: |
         mkdir releases
-        zip -r ./releases/release.zip .
+        zip -r ./releases/SocPuppet.zip .
     - name: Upload the Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: "SocPuppet.zip"
-        path: ./releases/release.zip
+        name: "SocPuppet"
+        path: ./releases/SocPuppet.zip
