removed unfurl due to issues, refactoring

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 requests
 ipwhois
-dfir-unfurl
+#dfir-unfurl
 gpt4all
 pywin32; sys_platform == 'win32'
 yara-python
@@ -8,3 +8,4 @@ pyyaml
 extract_msg
 python-whois
 pygments
+alive-progress
