--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 base64 = "0.21.5"
 regex = "1.10.2"
+reqwest = { version = "0.11.22", features = ["blocking"]}
 serde_json = "1.0.108"
 urlencoding = "2.1.3"
