--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ regex = "1.10.2"
 reqwest = { version = "0.11.22", features = ["blocking"]}
 serde_json = "1.0.108"
 urlencoding = "2.1.3"
+serde = { version = "1.0", features = ["derive"]}
